[metadata]
name = FEAPExternalData
description = External data for FE in AP
author = Rosalie
version = 1
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >= 3.8
zip_safe = no
include_package_data = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src